# smart-modulating-thermostat

./: AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
custom_components/boiler_helper/: __init__.py
custom_components/modulating_thermostat/: __init__.py  __main__.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py  services.yaml
custom_components/modulating_thermostat/translations/: en.json
scripts/: deploy_to_home_assistant.sh
tests/: test_control_loop.py
