[project]
name = "boiler-smart-thermostat"
version = "0.1.0"
description = "Home assistant integration to implement smart thermostat control for boilers"
readme = "README.md"
authors = [
    { name = "Cameron Harris", email = "274923+corruptmem@users.noreply.github.com" }
]
requires-python = "~=3.13.7"
dependencies = []

[dependency-groups]
dev = [
    "homeassistant>=2025.10.1",
    "pyright>=1.1.406",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.13.3",
]

[tool.ruff]


[tool.pytest.ini_options]
addopts = "--cov=custom_components.modulating_thermostat --cov-report=term-missing"
testpaths = [
    "tests"
]


[tool.coverage.run]
source = [
    "custom_components.modulating_thermostat"
]
omit = [
    "custom_components/modulating_thermostat/__main__.py",
    "custom_components/modulating_thermostat/config_flow.py",
    "custom_components/modulating_thermostat/number.py",
    "custom_components/modulating_thermostat/sensor.py",
    "custom_components/modulating_thermostat/__init__.py"
]
